--- a/src/styles/AppNavbar.css
+++ b/src/styles/AppNavbar.css
@@ -1,5 +1,20 @@
 /* AppNavbar.css */
 
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 10px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 25px;
+  background-color: #333;
+  color: white;
+  font-size: 1.2rem;
+}
+
 .navbar-brand {
   font-size: 1.2rem;
   white-space: nowrap; /* Prevent wrapping */
