--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Segoe UI', sans-serif;
-  background-color: #E3E6E6;
+  background-color: #E3E6E6 !important;
   margin: 0;
   padding: 0;
 }
