--- a/client/src/styles/AppNavbar.css
+++ b/client/src/styles/AppNavbar.css
@@ -47,6 +47,18 @@
   white-space: nowrap;
 }
 
+.suggestions-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  max-height: 250px;
+  overflow-y: auto;
+  z-index: 999;
+}
+.suggestion-item:hover {
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
 
 /* Reduce size on extra small screens */
 @media (max-width: 576px) {
